mailhog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: mailhog
  name: mailhog
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mailhog
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        network/sail: "true"
        service: mailhog
    spec:
      containers:
        - image: mailhog/mailhog:latest
          name: mailhog
          ports:
            - containerPort: 1025
            - containerPort: 8025
          resources: {}
      restartPolicy: Always
status: {}
