mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        network/sail: "true"
        service: mysql
    spec:
      containers:
        - env:
            - name: MYSQL_ALLOW_EMPTY_PASSWORD
              value: "1"
            - name: MYSQL_DATABASE
            - name: MYSQL_PASSWORD
            - name: MYSQL_ROOT_HOST
              value: '%'
            - name: MYSQL_ROOT_PASSWORD
            - name: MYSQL_USER
          image: mysql/mysql-server:8.0
          livenessProbe:
            exec:
              command:
                - mysqladmin
                - ping
                - -p
            failureThreshold: 3
            timeoutSeconds: 5
          name: mysql
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: sail-mysql
            - mountPath: /docker-entrypoint-initdb.d/10-create-testing-database.sh
              name: mysql-claim1
      restartPolicy: Always
      volumes:
        - name: sail-mysql
          persistentVolumeClaim:
            claimName: sail-mysql
        - name: mysql-claim1
          persistentVolumeClaim:
            claimName: mysql-claim1
status: {}
