redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      service: redis
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        network/sail: "true"
        service: redis
    spec:
      containers:
        - image: redis:alpine
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            failureThreshold: 3
            timeoutSeconds: 5
          name: redis
          ports:
            - containerPort: 6379
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: sail-redis
      restartPolicy: Always
      volumes:
        - name: sail-redis
          persistentVolumeClaim:
            claimName: sail-redis
status: {}
