meilisearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: meilisearch
  name: meilisearch
spec:
  ports:
    - name: "7700"
      port: 7700
      targetPort: 7700
  selector:
    service: meilisearch
status:
  loadBalancer: {}
