nginx-all.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
    - name: "443"
      port: 443
      targetPort: 443
    - name: "81"
      port: 81
      targetPort: 81
  selector:
    io.kompose.service: nginx
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      service: nginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        network/backend: "true"
        network/frontend: "true"
        service: nginx
    spec:
      containers:
      restartPolicy: Always
      volumes:
        - name: app-code-pvc
          persistentVolumeClaim:
            claimName: app-code-pvc
        - name: nginx-log-pvc
          persistentVolumeClaim:
            claimName: nginx-log-pvc
        - name: nginx-sites-pvc
          persistentVolumeClaim:
            claimName: nginx-sites-pvc
        - name: nginx-ssl-pvc
          persistentVolumeClaim:
            claimName: nginx-ssl-pvc
status: {}
