user-service.test-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: user-service-test
  name: user-service.test
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
    - name: "5173"
      port: 5173
      targetPort: 5173
  selector:
    service: user-service-test
status:
  loadBalancer: {}
